// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Avatar Basic Usage 1`] = `
Object {
  "docs": "The most basic instance of an Avatar requires a src image and a title to be used for accessibility or as a fallback in case the image can't be loaded.",
  "html": "<span
  class=\\"drac-avatar drac-bg-green-transparent drac-text-green\\"
  style=\\"
    background-image: url(https://pbs.twimg.com/profile_images/1217874327137185794/rFqSV_h0_400x400.jpg);
  \\"
></span>
",
  "react": "<Avatar
  title=\\"Netto Farah\\"
  src=\\"https://pbs.twimg.com/profile_images/1217874327137185794/rFqSV_h0_400x400.jpg\\"
/>;
",
  "title": "basic usage",
}
`;

exports[`Site: Avatar Custom colors 1`] = `
Object {
  "docs": "The Avatar component accepts a *color* param that allows for customizing the background and accent color for an Avatar.",
  "html": "<div>
  <span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green\\"
    color=\\"cyan\\"
    ><span color=\\"white\\" class=\\"drac-text drac-text-white\\">NF</span></span
  >
</div>
",
  "react": "<div>
  <Avatar title=\\"Netto Farah\\" color=\\"cyan\\" />
</div>;
",
  "title": "Custom colors",
}
`;

exports[`Site: Avatar Custom variants 1`] = `
Object {
  "docs": "Avatars accept multiple variants, which can be used to render a more subtle variation of the Avatar component.",
  "html": "<div>
  <span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-subtle\\"
    ><span color=\\"white\\" class=\\"drac-text drac-text-white\\">ZR</span></span
  ><span class=\\"drac-avatar drac-bg-green-transparent drac-text-green\\"
    ><span color=\\"white\\" class=\\"drac-text drac-text-white\\">NF</span></span
  >
</div>
",
  "react": "<div>
  <Avatar title=\\"Zeno Rocha\\" variant=\\"subtle\\" />
  <Avatar title=\\"Netto Farah\\" variant=\\"normal\\" />
</div>;
",
  "title": "Custom variants",
}
`;

exports[`Site: Avatar border: large 1`] = `
Object {
  "docs": "A border variant allows for customization of the border width of an Avatar, or for an Avatar to be rendered without a border.",
  "html": "<span
  class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-lg-stroke\\"
  ><span color=\\"white\\" class=\\"drac-text drac-text-white\\">NF</span></span
>
",
  "react": "<Avatar title=\\"Netto Farah\\" borderVariant=\\"large\\" />;
",
  "title": "border: large",
}
`;

exports[`Site: Avatar border: none 1`] = `
Object {
  "docs": "A border variant allows for customization of the border width of an Avatar, or for an Avatar to be rendered without a border.",
  "html": "<span
  class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-no-border\\"
  ><span color=\\"white\\" class=\\"drac-text drac-text-white\\">NF</span></span
>
",
  "react": "<Avatar title=\\"Netto Farah\\" borderVariant=\\"none\\" />;
",
  "title": "border: none",
}
`;

exports[`Site: Avatar border: normal 1`] = `
Object {
  "docs": "A border variant allows for customization of the border width of an Avatar, or for an Avatar to be rendered without a border.",
  "html": "<span class=\\"drac-avatar drac-bg-green-transparent drac-text-green\\"
  ><span color=\\"white\\" class=\\"drac-text drac-text-white\\">NF</span></span
>
",
  "react": "<Avatar title=\\"Netto Farah\\" borderVariant=\\"normal\\" />;
",
  "title": "border: normal",
}
`;
